crates/lattice-service/tests/ui/service_context_placement_write.stderr
error[E0599]: no method named `grant_instance_lease` found for struct `Arc<dyn DynPlacementStore>` in the current scope
 --> tests/ui/service_context_placement_write.rs:6:23
  |
6 |     let _ = placement.grant_instance_lease().await;
  |                       ^^^^^^^^^^^^^^^^^^^^
  |
help: there is a method `get_instance` with a similar name, but with different arguments
 --> src/framework/placement.rs
  |
  | /     async fn get_instance(
  | |         &self,
  | |         instance_id: &InstanceId,
  | |     ) -> Result<Option<InstanceRecord>, PlacementError>;
  | |________________________________________________________^
